WIP: Add support for java 9 (#1393)
* Add support for java 9

* Move multi-release to java 9 only

* Have a single DefaultMethodHandle for java 8 and 11 that don't print warnings

* Bump spring version

Co-authored-by: Clayton Walker <cwalker@sofi.org>
Co-authored-by: Marvin Froeder <marvin.froeder@dovetailstudios.com>